--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@wix/bookings": "^1.0.396",
     "@wix/sdk": "^1.10.1",
     "@wix/stores": "^1.0.157",
+    "isomorphic-dompurify": "^2.12.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "react": "^18",
