--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "@wix/bookings": "^1.0.396",
     "@wix/ecom": "^1.0.613",
     "@wix/members": "^1.0.86",
@@ -17,9 +18,11 @@
     "@wix/stores": "^1.0.157",
     "isomorphic-dompurify": "^2.12.0",
     "js-cookie": "^3.0.5",
+    "nanoid": "^5.0.7",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
