--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.2",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
