--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "timeago.js": "^4.0.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
